--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,31 @@
-build-job:
+image: atnartur/docker:latest
+
+stages:
+  - build
+  - test
+  - deploy
+
+build:
   stage: build
   script:
-    - echo "Hello, $GITLAB_USER_LOGIN!"
+    - docker build -f Dockerfile .
+  tags:
+    - django_backend
 
-test-job1:
+test:
   stage: test
   script:
-    - echo "This job tests something"
+    - docker-compose -f docker-compose.test.yml -p django_backend_tests run app
+  after_script:
+    - docker-compose -f docker-compose.test.yml -p django_backend_tests down -v
+  tags:
+    - django_backend
 
-test-job2:
-  stage: test
-  script:
-    - echo "This job tests something, but takes more time than test-job1."
-    - echo "After the echo commands complete, it runs the sleep command for 20 seconds"
-    - echo "which simulates a test that runs 20 seconds longer than test-job1"
-    - sleep 20
-
-deploy-prod:
+deploy_linux:
   stage: deploy
   script:
-    - echo "This job deploys something from the $CI_COMMIT_BRANCH branch."
-  environment: production
+    - docker build --file Dockerfile .
+  tags:
+    - django_backend
+  only:
+    - master
